<resources>
    <string name="action_example">Example action</string>
    <string name="input_prefill"></string>
    <string name="base_url" translatable="false">http://query.yahooapis.com/v1/public/yql?q=</string>
    <string name="improved_base_url" translatable="false">http://query.yahooapis.com/v1/public/</string>
    <string name="quotes_query" translatable="false">select * from yahoo.finance.quotes where symbol in (</string>
    <string name="charset" translatable="false">UTF-8</string>
    <string name="stock_status_key" translatable="false">stock_status</string>

    <string name="app_name">Stock Hawk</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint">FB</string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="stock_inexistent">Stock doesn\'t exist</string>
    <string name="stock_status_server_invalid">Server is returning malformed data</string>
    <string name="stock_status_server_down">Server Down</string>
    <string name="todays_stocks">Today\'s Bid Prices</string>
    <string name="no_stocks_present">No Stocks Present</string>
    <string name="add_stock">Add Stock</string>
    <string name="stocks">Stocks</string>
    <string name="no_internet_connection">Not connected to internet</string>
    <string name="stock_symbol">Stock Symbol %s</string>
    <string name="bid_price">Bid Price %s</string>
    <string name="percent_change">Percent Change %s \%</string>
    <string name="change">Change %s</string>
    <string name="stock_detail">Stock Detail</string>
    <string name="todays_bid_prices">Today\'s Bid Prices</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="quote_bid_price">Bid Price: %s</string>
    <string name="quote_percent_change">Percent Change: %s%%</string>
    <string name="stock_history_graph">Stock History Graph</string>
    <string name="progress_loading_stocks_history">Please Wait! Loading Stock History</string>
</resources>
